Add multi-step form with validation and hidden fields

--- a/slider-thumbs-link/index.html
+++ b/slider-thumbs-link/index.html
@@ -9,7 +9,7 @@
     <!-- Slider -->
     <section class="slider">
       <div class="slide active">
-        <img src="assets/slide-1.jpg" alt="Slide 1" />
+        <img src="assets/4.png" alt="Slide 1" />
         <div class="slide-content">
           <h3>Enterprise Payments</h3>
           <p>Scalable payment infrastructure for global businesses.</p>
@@ -17,7 +17,7 @@
       </div>
 
       <div class="slide">
-        <img src="assets/slide-2.jpg" alt="Slide 2" />
+        <img src="assets/5.png" alt="Slide 2" />
         <div class="slide-content">
           <h3>Subscription Billing</h3>
           <p>Flexible recurring billing with enterprise-grade control.</p>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="slide">
-        <img src="assets/slide-3.jpg" alt="Slide 3" />
+        <img src="assets/6.png" alt="Slide 3" />
         <div class="slide-content">
           <h3>Global Expansion</h3>
           <p>Launch faster in new markets with localized payments.</p>
