test wit actual gtm scripts

--- a/enterprise-gtm-test/index.html
+++ b/enterprise-gtm-test/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -11,26 +12,30 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-MOCK123");
+      })(window, document, "script", "dataLayer", "GTM-KVXWR5HX");
     </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <title>GTM & DataLayer Practice</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-MOCK123"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KVXWR5HX"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div class="container">
       <h1>Marketing Stack Simulation</h1>
       <p>
-        Click the button below to trigger a "Success Event" in the DataLayer.
+        Click the button below to record a "Success Event" in the DataLayer.
       </p>
 
       <button id="purchase-btn" class="btn">Complete Purchase ($99)</button>
